<resources>
	<string name="app_name">NemakiWare CMIS Browser</string>
	<string name="home_menu_repository">CMIS Repositories</string>
	<string name="home_menu_favorites">Favorites</string>
	<string name="home_menu_about">About</string>
	<string name="home_menu_explorer">File Explorer</string>
	<string name="menu_item_server_add">Add Server</string>
	<string name="context_menu_title">Server Option</string>
	<string name="server_delete">Server removed : OK</string>
    <string name="server_delete_error">A problem occured during delete action. Please try again...</string>
	<string name="cmis_repo_server_name">Server Name</string>
	<string name="cmis_repo_server_url">URL</string>
	<string name="cmis_repo_user">User</string>
	<string name="cmis_repo_password">Password</string>
	<string name="cmis_repo_workspace">Default Workspace</string>
	<string name="cmis_repo_choose_workspace">Choose Default Workspace</string>
	<string name="error_repo_connexion">Repository not set up correctly. Please check the repository settings.</string>
	<string name="cmis_repo_fields">Some fiels are required : NAME, URL, WORKSPACE</string>
	<string name="server_info">Server Info</string>
	<string name="server_info_general">General</string>
	<string name="server_info_acl">ACL</string>
	<string name="server_info_capabilites">Capabilities</string>
	<string name="feed_menu_title">File Option</string>
	<string name="menu_item_settings">Servers</string>
    <string name="menu_item_settings_reload">Reload</string>
    <string name="menu_item_settings_repo">Change repository</string>
    <string name="menu_item_settings_ws">Change workspace</string>
    <string name="menu_item_about">About</string>
	<string name="menu_item_search">Search</string>
	<string name="menu_item_search_cmis">CMIS query</string>
    <string name="menu_item_search_fulltext">Fulltext search</string>
    <string name="menu_item_search_title">Document title</string>
    <string name="menu_item_search_folder_title">Folder title</string>
    <string name="menu_item_search_saved_search">Saved search</string>
    <string name="menu_item_details">Display details</string>
	<string name="menu_item_share">Share...</string>
	<string name="menu_item_add_favorite">Add favorite</string>
	<string name="menu_item_favorites">Favorites</string>
	<string name="menu_item_home">Home</string>
	<string name="menu_item_up">Up</string>
	<string name="menu_item_back">Back</string>
	<string name="menu_item_next">Next</string>
	<string name="menu_item_prefs">Prefs</string>
	<string name="menu_item_refresh">Refresh</string>
	<string name="menu_item_scanner">Scanner</string>
	<string name="menu_item_view">View</string>
	<string name="menu_item_filter">Filter</string>
	<string name="menu_item_tools">Tools</string>
	<string name="menu_item_download_manager">Download</string>
	<string name="loading_data">Please wait a few moment... Loading data...</string>
	<string name="notif_download_finish">Download finished</string>
	<string name="notif_download_title">Download file : Done.</string>
	<string name="notif_download_texte">Open File : </string>
	<string name="notif_open">Open...</string>
	<string name="search_label">CMIS Repository</string>
	<string name="search_results_for">results for</string>
	<string name="search_save">Saved search</string>
	<string name="saved_search_title">Saved search for</string>
	<string name="saved_search_option">Option for saved search</string>
	<string name="saved_search_present">Saved search already present</string>
	<string name="saved_search_create_error">A problem occured during creation action. Please try again...</string>
	<string name="saved_search_create">Save search has been added sucessfully</string>
	<string name="search_create_title">Save your search</string>
	<string name="search_create_desc">Enter the name of your saved search</string>
	<string name="search_progress">Searching in progress...</string>
	<string name="cmis_repo_search_pref">Search Preferences</string>
	<string name="cmis_repo_exact_search">exactSearching</string>
	<string name="cmis_repo_exact_search_title">Exact Search</string>
	<string name="cmis_repo_exact_search_desc">No search approximate if enable</string>
	<string name="title_details">Details for</string>
	<string name="download_progress">Downloading content...</string>
	<string name="main_no_items">No documents to display</string>
	<string name="error_file_does_not_exists">Downloaded file does not exist.</string>
	<string name="application_not_available">There is no application to open this file type.</string>
	<string name="error_downloading_content">Error downloading content from CMIS repository.</string>
	<string name="no_properties">No properties found.</string>
	<string name="confirm_donwload">Are you sure you want to download this</string>
	<string name="confirm_donwload2">file ?</string>
	<string name="share_question">You want to share...</string>
	<string name="share_link">Link</string>
	<string name="share_content">Content</string>
	<string name="open_with_title">Open with...</string>
	<string name="open_with_text">Text</string>
	<string name="open_with_audio">Audio</string>
	<string name="open_with_image">Image</string>
	<string name="open_with_video">Video</string>
	<string name="delete">Delete...</string>
    <string name="edit">Edit</string>
    <string name="validate">Validate</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="quit">Quit</string>
    <string name="loading">Loading...</string>
    <string name="data_empty">No data available...</string>
    <string name="qrcode">QRCode</string>
    <string name="generic_error">An error occured during the treatment. Please try again...</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="view">View</string>
    <string name="open">Open</string>
    <string name="open_with">Open with</string>
    <string name="progress">Progress</string>
    <string name="rename">Rename</string>
    <string name="copy">Copy</string>
	<string name="paste">Paste</string>
	<string name="cut">Cut</string>
	<string name="move">Move</string>
	<string name="create_folder">Create folder</string>
	<string name="sorting">Sorting</string>
	<string name="about_dev">Developers</string>
	<string name="about_resources">Resources</string>
	<string name="about_project_website">Visit Android CMIS Browser Project Website</string>
	<string name="about_openicon_website">Visit Open Icon Library Website</string>
	<string name="about_open_market">Vote for Android CMIS Browser</string>
	<string name="about_share_app">Share Android CMIS Browser</string>
    <string name="favorite_create">Favorite has been added sucessfully</string>
    <string name="favorite_present">This favorite is already present</string>
    <string name="favorite_create_error">A problem occured during creation action. Please try again...</string>
	<string name="favorite_delete">Favorite has been removed sucessfully</string>
    <string name="favorite_delete_error">A problem occured during delete action. Please try again...</string>
	<string name="favorite_error">Favorite is not available or has been deleted.</string>
	<string name="favorite_error_loading">A problem occured during loading action. Please try again...</string>
	<string name="favorite_open">Choose your view...</string>
	<string name="favorite_open_folder">Folder</string>
	<string name="favorite_open_details">Details</string>
	<string name="favorite_title">Favorites for</string>
	<string name="favorite_option">Favorite Option</string>
	<string name="cmis_repo_filter_pref">Filter Preferences</string>
	<string name="cmis_repo_params">CmisRepoParams</string>
	<string name="cmis_repo_params_title">Filter</string>
	<string name="cmis_repo_params_desc">Enable filter parameters.</string>
	<string name="cmis_repo_maxitems">cmisRepoServerMaxItems</string>
	<string name="cmis_repo_maxitems_title">Max Items</string>
	<string name="cmis_repo_maxitems_desc">This is the maximum number of items to return in a response.</string>
	<string name="cmis_repo_filter">CmisRepoFilter</string>
	<string name="cmis_repo_filter_title">Properties Filter</string>
	<string name="cmis_repo_filter_desc">Not available!</string>
	<string name="cmis_repo_types">CmisRepoTypes</string>
	<string name="cmis_repo_types_title">Children Types</string>
	<string name="cmis_repo_types_desc">Restrict the type of children returned. (documents, folders, policies, any)</string>
	<string name="cmis_repo_orderby">CmisRepoOrderBy</string>
	<string name="cmis_repo_orderby_title">Order By</string>
	<string name="cmis_repo_orderby_desc">Identifies the order in which the result rows must be sorted</string>
	<string name="cmis_repo_paging">CmisRepoPaging</string>
	<string name="cmis_repo_paging_title">Paging</string>
	<string name="cmis_repo_paging_desc">Enable Paging</string>
	<string name="cmis_repo_skipcount">CmisRepoSkipCount</string>
	<string name="item_filter_title">Choose your metadata filter...</string>
	<string name="item_filter_object">Object</string>
	<string name="item_filter_folder">Folder</string>
	<string name="item_filter_document">Document</string>
	<string name="item_filter_content">Content</string>
	<string name="item_filter_extra">Extra</string>
	<string name="item_filter_all">All</string>
	<string name="cmis_repo_pref">Preferences</string>
	<string name="cmis_repo_data">Data</string>
	<string name="cmis_repo_view">View</string>
	<string name="cmis_cache">CmisCache</string>
	<string name="cmis_cache_title">Delete cache</string>
	<string name="cmis_cache_desc">Directory where we store feed and document cache.</string>
	<string name="cmis_dlfolder">CmisDownloadFolder</string>
	<string name="cmis_dlfolder_title">Download Folder</string>
	<string name="cmis_dlfolder_desc">Directory where we store downloaded file.</string>
	<string name="cmis_defaultview">CmisDefaultView</string>
	<string name="cmis_defaultview_title">Default View Type</string>
	<string name="cmis_defaultview_desc">List or Grid view</string>
	<string name="cmis_scan">CmisDefaultView</string>
	<string name="cmis_scan_title">Enable Scan</string>
	<string name="cmis_scan_desc">Enable QRCode scan and generator.</string>
	<string name="cmis_download">CmisDownloadConfirm</string>
	<string name="cmis_download_title">Download confirmation</string>
	<string name="cmis_download_desc">Ask for a confirmation before downloading.</string>
	<string name="cmis_download_size">CmisDownloadSizeConfirm</string>
	<string name="cmis_download_size_title">File Size</string>
	<string name="cmis_download_size_desc">File size (in KB) from which we need confirmation</string>
	<string name="file_size_bytes">bytes</string>
	<string name="file_size_kilobytes">KB</string>
	<string name="file_size_megabytes">MB</string>
	<string name="file_size_gigabytes">GB</string>
	<string name="action_rename_desc">Enter a new name for this item</string>
	<string name="action_delete_desc">Are you sure you want to delete this item : </string>
	<string name="action_create_folder_des">Enter the name of your new folder </string>
	<string name="action_sorting_title">Choose your sorting...</string>
	<string name="action_sorting_name">Name</string>
	<string name="action_sorting_size">Size</string>
	<string name="action_sorting_date">Date</string>
	<string name="action_clipboard_add">This item has been added to clipboard.</string>
	<string name="copied_file_name">copy_</string>
	<string name="action_clear_clipboard">Clear clipboard</string>
	<string name="action_clear_success">Clipboard has been cleared.</string>
	<string name="action_paste_success">Paste action : ok</string>
	<string name="delete_list">Remove from list</string>
	<string name="cancel_download">Cancel download</string>
	<string name="cancel_progress">Cancel in progress...</string>
</resources>