<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   >
   
    <HorizontalScrollView 
        android:id="@+id/my_scrollview"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:scrollbars="none" 
		>

            <LinearLayout android:id="@+id/my_layout"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content" 
                    >

            <Button
				android:id="@+id/home"
				android:layout_height="wrap_content"
				android:drawableTop="@drawable/home"
				android:clickable="true"
				android:text="@string/menu_item_home"
				android:layout_marginRight="3dip"
				android:layout_width="fill_parent" 
				android:textSize="8sp" />
				
			<Button
				android:id="@+id/up"
				android:layout_height="wrap_content"
				android:drawableTop="@drawable/up"
				android:clickable="true"
				android:text="@string/menu_item_up"
				android:layout_marginRight="3dip"
				android:layout_width="wrap_content" 
				android:textSize="8sp" />
		
			<Button
				android:id="@+id/multiple"
				android:layout_height="wrap_content"
				android:drawableTop="@drawable/multiple"
				android:clickable="true"
				android:text="multiple"
				android:layout_marginRight="3dip"
				android:layout_width="wrap_content" 
				android:textSize="8sp" />
		
		
			<Button
				android:id="@+id/order"
				android:layout_height="wrap_content"
				android:drawableTop="@drawable/filter"
				android:clickable="true"
				android:text="@string/sorting"
				android:layout_marginRight="3dip"
				android:layout_width="wrap_content" 
				android:textSize="8sp" />
		
			<Button
				android:id="@+id/preference"
				android:layout_height="wrap_content"
				android:drawableTop="@drawable/filter"
				android:clickable="true"
				android:text="@string/menu_item_filter"
				android:layout_marginRight="3dip"
				android:layout_width="wrap_content" 
				android:textSize="8sp" />
			
			<Button
				android:id="@+id/cancel"
				android:layout_height="wrap_content"
				android:drawableTop="@drawable/cancel"
				android:clickable="true"
				android:text="@string/cancel"
				android:layout_marginRight="3dip"
				android:layout_width="wrap_content" 
				android:textSize="8sp"
				android:visibility="gone" />
			
			
			<Button
				android:id="@+id/copy"
				android:layout_height="wrap_content"
				android:drawableTop="@drawable/copy"
				android:clickable="true"
				android:text="@string/copy"
				android:layout_marginRight="3dip"
				android:layout_width="wrap_content" 
				android:textSize="8sp"
				android:visibility="gone" />
				
			<Button
				android:id="@+id/cut"
				android:layout_height="wrap_content"
				android:drawableTop="@drawable/cut"
				android:clickable="true"
				android:text="@string/cut"
				android:layout_marginRight="3dip"
				android:layout_width="wrap_content" 
				android:textSize="8sp"
				android:visibility="gone" />
				
			<Button
				android:id="@+id/paste"
				android:layout_height="wrap_content"
				android:drawableTop="@drawable/paste"
				android:clickable="true"
				android:text="@string/paste"
				android:layout_marginRight="3dip"
				android:layout_width="wrap_content" 
				android:textSize="8sp" />
				
			<Button
				android:id="@+id/clear"
				android:layout_height="wrap_content"
				android:drawableTop="@drawable/clear"
				android:clickable="true"
				android:text="@string/action_clear_clipboard"
				android:layout_marginRight="3dip"
				android:layout_width="wrap_content" 
				android:textSize="8sp" />
				
			<Button
				android:id="@+id/delete"
				android:layout_height="wrap_content"
				android:drawableTop="@drawable/delete"
				android:clickable="true"
				android:text="@string/delete"
				android:layout_marginRight="3dip"
				android:layout_width="wrap_content" 
				android:textSize="8sp"
				android:visibility="gone" />
				
        </LinearLayout>
	</HorizontalScrollView>
   
		<HorizontalScrollView 
        android:id="@+id/my_scrollview2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:background="#404040"
		>

           <TextView
            android:id="@+id/path"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left" 
            android:textSize="12dip"
            android:textColor="#ffffff"
            android:text=">"/>
                    
    </HorizontalScrollView>
   
   <LinearLayout android:id="@+id/animation"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="40dip"
                    android:visibility="gone"
                    >

            <ImageView
		        android:id="@+id/repository_image"
		        android:layout_width="wrap_content"
		        android:layout_height="fill_parent"
		        android:src="@drawable/repository" />
		        
		    <ImageView
		        android:id="@+id/transfert"
		        android:layout_width="wrap_content"
		        android:layout_height="fill_parent"
		        android:src="@drawable/next_l"
		        android:paddingLeft="70dip" 
		        android:paddingRight="70dip" 
		        />
		        
		     <ImageView
		        android:id="@+id/phone"
		        android:layout_width="wrap_content"
		        android:layout_height="fill_parent"
		        android:src="@drawable/phone_l"
		         />
        </LinearLayout>
   
   
   <LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:id="@+id/listing"
		>
   
		<ListView
		    android:id="@+id/android:list"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    />
		
		<TextView
		    android:id="@+id/empty"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:text="@string/main_no_items"
		    android:visibility="gone"
		    />
		    
    </LinearLayout>
    
     <LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		>
		
    	<GridView xmlns:android="http://schemas.android.com/apk/res/android" 
		    android:id="@+id/gridview"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content"
		    android:columnWidth="90dp"
		    android:numColumns="auto_fit"
		    android:verticalSpacing="5dp"
		    android:horizontalSpacing="5dp"
		    android:stretchMode="columnWidth"
		    android:gravity="center"
		/>
	</LinearLayout>
    
</LinearLayout>